--- a/index.html
+++ b/index.html
@@ -26,41 +26,41 @@
     </style>
   </head>
   <body>
-    <div class="card-container">
-      <div class="image-container">
-        <picture>
-          <source
-            media="(min-width:600px)"
-            srcset="/images/image-product-desktop.jpg"
-          />
-          <source srcset="/images/image-product-mobile.jpg" />
-          <img src="/images/image-product-desktop.jpg" alt="" />
-        </picture>
-      </div>
-      <div class="info-container">
-        <div class="item-category grey-text">Perfume</div>
-        <h1>Gabrielle Essence Eau De Parfum</h1>
-        <p class="grey-text">
-          A floral, solar and voluptuous interpretation composed by Olivier
-          Polge, Perfumer-Creator for the House of CHANEL.
-        </p>
-        <div class="price-container">
-          <div class="price-actual">$149.99</div>
-          <div class="price">$169.99</div>
+    <main>
+      <div class="card-container">
+        <div class="image-container">
+          <picture>
+            <source
+              media="(min-width:600px)"
+              srcset="/images/image-product-desktop.jpg"
+            />
+            <source srcset="/images/image-product-mobile.jpg" />
+            <img src="/images/image-product-desktop.jpg" alt="" />
+          </picture>
         </div>
-
-        <button>
-          <object data="/images/icon-cart.svg"></object>
-          <span>Add to Cart</span>
-        </button>
+        <div class="info-container">
+          <div class="item-category grey-text">Perfume</div>
+          <h1>Gabrielle Essence Eau De Parfum</h1>
+          <p class="grey-text">
+            A floral, solar and voluptuous interpretation composed by Olivier
+            Polge, Perfumer-Creator for the House of CHANEL.
+          </p>
+          <div class="price-container">
+            <div class="price-actual">$149.99</div>
+            <div class="price">$169.99</div>
+          </div>
+          <button>
+            <object alt="cart" data="/images/icon-cart.svg"></object>
+            <span>Add to Cart</span>
+          </button>
+        </div>
       </div>
-    </div>
-
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Cody Tessler</a>.
-    </div>
-  </body>
+      <div class="attribution">
+        Challenge by
+        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+          >Frontend Mentor</a
+        >. Coded by <a href="#">Cody Tessler</a>.
+      </div>
+        </body>
+    </main>
 </html>
