Updated image source

--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <picture>
             <source
               media="(min-width:600px)"
-              srcset="/images/image-product-desktop.jpg"
+              srcset="./images/image-product-desktop.jpg"
             />
-            <source srcset="/images/image-product-mobile.jpg" />
-            <img src="/images/image-product-desktop.jpg" alt="" />
+            <source srcset="./images/image-product-mobile.jpg" />
+            <img src="./images/image-product-desktop.jpg" alt="" />
           </picture>
         </div>
         <div class="info-container">
