Adjustments on height to improve responsive design

--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
               srcset="./images/image-product-desktop.jpg"
             />
             <source srcset="./images/image-product-mobile.jpg" />
-            <img src="./images/image-product-desktop.jpg" alt="" />
+            <img src="./images/image-product-desktop.jpg" alt="perfune" />
           </picture>
         </div>
         <div class="info-container">
           <div class="item-category grey-text">Perfume</div>
           <h1>Gabrielle Essence Eau De Parfum</h1>
-          <p class="grey-text">
+          <p class="grey-text spaced">
             A floral, solar and voluptuous interpretation composed by Olivier
             Polge, Perfumer-Creator for the House of CHANEL.
           </p>
